--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -7,7 +7,7 @@ $datepicker__margin: 7px;
 $datepicker__navigation-button-size: 32px;
 $datepicker__triangle-size: 8px;
 
-@import "react-datepicker/src/stylesheets/datepicker.scss";
+@import "../../../node_modules/react-datepicker/src/stylesheets/datepicker.scss";
 
 .react-datepicker__triangle {
     display: none !important;
