--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -1,5 +1,3 @@
-@import "../main/global.scss";
-
 .popup-wrapper {
     position: fixed;
     width: 100%;
@@ -28,10 +26,22 @@
         z-index: -1;
         background-color: rgba(0, 0, 0, 0);
         transition: 0.2s background-color 0.3s ease, 0s width 0.5s ease, 0s height 0.5s ease, 0s overflow 0.5s ease, 0s z-index 0.5s ease;
+        -webkit-transition: 0.2s background-color 0.3s ease, 0s width 0.5s ease, 0s height 0.5s ease, 0s overflow 0.5s ease, 0s z-index 0.5s ease;
+        -ms-transition: 0.2s background-color 0.3s ease, 0s width 0.5s ease, 0s height 0.5s ease, 0s overflow 0.5s ease, 0s z-index 0.5s ease;
+        -moz-transition: 0.2s background-color 0.3s ease, 0s width 0.5s ease, 0s height 0.5s ease, 0s overflow 0.5s ease, 0s z-index 0.5s ease;
+        -o-transition: 0.2s background-color 0.3s ease, 0s width 0.5s ease, 0s height 0.5s ease, 0s overflow 0.5s ease, 0s z-index 0.5s ease;
 
         .popup-container {
-            @include transform(scale(0));
-            @include transition(0.3s all ease);
+            transform: scale(0);
+            -webkit-transform: scale(0);
+            -ms-transform: scale(0);
+            -moz-transform: scale(0);
+            -o-transform: scale(0);
+            transition: .3s all ease;
+            -webkit-transition: .3s all ease;
+            -ms-transition: .3s all ease;
+            -moz-transition: .3s all ease;
+            -o-transition: .3s all ease;
         }
     }
 
@@ -41,11 +51,23 @@
         pointer-events: initial;
         overflow: auto;
         background-color: rgba(0, 0, 0, 0.5);
-        @include transition(0.2s background-color ease);
+        transition: 0.2s background-color ease;
+        -webkit-transition: 0.2s background-color ease;
+        -ms-transition: 0.2s background-color ease;
+        -moz-transition: 0.2s background-color ease;
+        -o-transition: 0.2s background-color ease;
 
         .popup-container {
-            @include transform(scale(1));
-            @include transition(0.3s all ease);
+            transform: scale(1);
+            -webkit-transform: scale(1);
+            -ms-transform: scale(1);
+            -moz-transform: scale(1);
+            -o-transform: scale(1);
+            transition: 0.3s all ease;
+            -webkit-transition: 0.3s all ease;
+            -ms-transition: 0.3s all ease;
+            -moz-transition: 0.3s all ease;
+            -o-transition: 0.3s all ease;
         }
     }
 
